<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.fun.monkeys.ribeat.or.ProductFragment"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_upper_card">
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline2"
                app:layout_constraintGuide_begin="150dp"/>
        <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:text="@string/placeholder" android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline2"/>

        <TextView
                android:id="@+id/product_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:lineSpacingExtra="9sp"
                android:gravity="center_vertical"
                android:textAppearance="?attr/textAppearanceListItem"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:textSize="14sp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/product_name"
                android:text="@string/lorem" app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="@+id/divider" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.0"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"/>

        <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/product_image"
                app:layout_constraintEnd_toEndOf="@+id/product_image" android:layout_marginTop="20dp"
                android:text="@string/price_placeholder" android:translationZ="1dp"
                android:background="@color/colorPrimary"
                android:paddingBottom="4dp" android:paddingTop="4dp"
                android:paddingLeft="8dp" android:paddingRight="8dp" android:textColor="@android:color/white"
                android:textAlignment="textEnd"/>
        <ImageView android:layout_width="0dp"
                   android:maxWidth="192dp"
                   android:layout_height="0dp"
                   android:id="@+id/product_image"
                   android:contentDescription="@string/category_image"
                   app:srcCompat="@drawable/ic_launcher_background"
                   app:layout_constraintDimensionRatio="1:1"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintEnd_toStartOf="@+id/guideline2" android:background="@android:color/black"/>
        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/product_image"
        />
        <Button
                android:text="@string/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/order_button"
                app:layout_constraintTop_toTopOf="@+id/divider" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" style="@style/Widget.AppCompat.Button.Borderless"
                android:elevation="0dp" android:layout_marginTop="4dp"/>
        <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/order_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/divider"
                app:layout_constraintEnd_toStartOf="@+id/order_plus_button"
                android:layout_marginEnd="8dp" tools:ignore="Autofill,LabelFor" android:layout_marginTop="4dp"
                android:text="0"/>
        <ImageView
                android:src="@drawable/ic_add_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_plus_button" app:layout_constraintEnd_toStartOf="@+id/order_button"
                android:layout_marginEnd="8dp" android:layout_marginTop="4dp"
                app:layout_constraintTop_toTopOf="@+id/divider"
                app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/plus_button"/>
        <ImageView
                android:src="@drawable/ic_remove_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_minus_button" app:layout_constraintEnd_toStartOf="@+id/order_count"
                android:layout_marginEnd="8dp" android:layout_marginTop="4dp"
                app:layout_constraintTop_toTopOf="@+id/divider"
                app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/minus_button"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_delete_black_24dp"
                android:id="@+id/order_delete_button" app:layout_constraintEnd_toStartOf="@+id/order_minus_button"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="@+id/divider"
                android:contentDescription="@string/delete_button"/>
        <TextView
                android:text="@string/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_marginTop="4dp"
                app:layout_constraintTop_toTopOf="@+id/divider" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp" android:textColor="@android:color/black" android:textStyle="bold"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/lei"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/order_total" app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="4dp"
                app:layout_constraintTop_toTopOf="@+id/divider" android:textSize="18sp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/order_delete_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
