<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:fadeScrollbars="true" android:duplicateParentState="true">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="match_parent">



                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:text="@string/ribeat"
                          app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="8dp"
                          android:gravity="center"
                          android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"/>

                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:text="@string/total" app:layout_constraintEnd_toStartOf="@+id/total_cost"
                          android:layout_marginEnd="8dp"
                          android:gravity="center"
                          android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                          android:id="@+id/textView2"/>

                <Button
                        android:text="@string/send_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/send_order"
                        app:layout_constraintEnd_toStartOf="@+id/textView2" android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                          android:id="@+id/total_cost" android:text="@string/lei"

                          android:gravity="center"
                          android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <fragment
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph"/>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>